# dot-connect

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  environment.yml  mkdocs.yml  requirements.txt  setup.cfg  setup.py  testing.ipynb  tox.ini
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: conda-install.yml  pre-commit.yml  pypi-publish.yml  pytest.yml  pytest_cov.yml  python-package-conda.yml  python-publish.yml  stale.yml  tox.yml
docs/: CNAME  CONTRIBUTING.md  about.md  index.md
docs/backends/: aws.md  azure.md  impala.md  mssql.md  mysql.md  postgres.md  pyspark.md  snowflake.md  snowpark.md
docs/examples/: aws.md  azure.md  snowflake.md  snowpark.md
dot_connect/: __init__.py  utils.py
dot_connect/backends/: __init__.py  aws.py  azure.py  gcs.py  impala.py  mssql.py  mysql.py  parse_files.py  postgres.py  pyspark.py  snowflake.py  snowpark.py
testing/: snowflake_key.ipynb  streamlit_example.py  testing.ipynb
tests/: __init__.py  docker-compose.yml  test_aws.py  test_azure.py  test_config_parser.py  test_mssql.py  test_mysql.py  test_postgres.py  test_snowflake.py  test_snowpark.py
tests/backends/: test_aws.py  test_postgres.py  test_snowpark.py
