[metadata]
name = dot_connect
version = 0.3.1
description = Improve your workflow efficiency by connecting to databases and cloud systems effortlessly.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/learning-the-computers/dot-connect
author = Tyler White
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    pyyaml
python_requires = >=3.8, <3.11

[options.extras_require]
dev =
    ipykernel
    pre-commit
    pytest
    python-dotenv
    tox
    tox-gh-actions
impala =
    impyla
mssql =
    pyodbc
mysql =
    mysql-connector-python
postgres =
    psycopg2-binary
snowflake =
    snowflake-snowpark-python
    snowflake-sqlalchemy
