[metadata]
name = dot_connect
version = 0.3.1
description = Improve your workflow efficiency by connecting to databases and cloud systems effortlessly.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/learning-the-computers/dot-connect
author = Tyler White
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.extras_require]
dev =
    ipykernel
    pre-commit
    pytest
    python-dotenv
    tox
    tox-gh-actions
impala =
    impyla
mssql =
    pyodbc
mysql =
    mysql-connector-python
postgres =
    psycopg2-binary
pyspark =
    pyspark
snowflake =
    snowflake-snowpark-python
    snowflake-sqlalchemy
