[metadata]
name = dot_connect
version = 0.3.2
description = Improve your workflow efficiency by connecting to databases and cloud systems effortlessly.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/learning-the-computers/dot-connect
author = Tyler White
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.extras_require]
aws =
    boto3>=1.28.30
azure =
    azure-core>=1.29.2
    azure-storage-blob>=12.17.0
dev =
    ipykernel>=6.25.1
    pre-commit>=3
    pytest>=7.4.0
    python-dotenv>=1.0.0
    tox>=4.9.0
    tox-gh-actions>=3.1.3
impala =
    impyla>=0.18.0
mssql =
    pyodbc>=4.0.39
mysql =
    mysql-connector-python>=8.1.0
postgres =
    psycopg2-binary>=2.9.7
pyspark =
    pyspark>=3.4.1
snowflake =
    snowflake-connector-python>=3.0.4
snowpark =
    snowflake-snowpark-python>=1.6.1
